// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`requires valid IATA code 1`] = `
Array [
  [GraphQLError: Field "availableWhitelabeledServices" argument "iataCode" of type "String!" is required but not provided.],
]
`;

exports[`requires valid IATA code 2`] = `
Array [
  [GraphQLError: Expected type String!, found 21.],
]
`;
